<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_collage_fragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.collageit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.collageit.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.collageit.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_collage_fragment"
        android:name="com.example.collageit.ui.navigationFragments.CollageFragment"
        android:label="@string/collages"
        tools:layout="@layout/fragment_collageList" />
    <fragment
        android:id="@+id/navigation_create_collage_fragment"
        android:name="com.example.collageit.ui.navigationFragments.CreateCollageFragment"
        android:label="@string/create_collage"
        tools:layout="@layout/fragment_create_collage" />
    <fragment
        android:id="@+id/navigation_profile_fragment"
        android:name="com.example.collageit.ui.navigationFragments.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>